[package]
name = "gfw-helper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
scraper = "0.19.0"
html2md = "0.2.15"
url = "2.5.0"
percent-encoding = "2.3.1"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.4"
image = "0.25.8"
