[package]
name = "gfw-helper"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
scraper = "0.19.0"
html2md = "0.2.15"
url = "2.5.0"
percent-encoding = "2.3.1"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.4"
image = "0.25.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"
colored = "2.1"
rayon = "1.10"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
